feat: Add styling to keybaord preview

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,11 @@
+/* Global Rules */
 body{
     font-family: sans-serif;
+    display:flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+    min-height: 100vh;
 }
 .text{
     display: flex;
@@ -26,4 +32,49 @@ body{
 }
 .input{
     background-color: rgb(84, 138, 255)!important;
+}
+
+/* Keyboard preview */
+
+.keyboard{
+    max-width: 80vw;
+    background-color: silver;
+    padding: 20px;
+    border-radius: 20px;
+    border: solid 1px rgb(102, 102, 102);
+    display: flex;
+    gap: 10px;
+    position: relative;
+    flex-direction: column;
+}
+.keyboard div{
+    display: flex;
+    gap: 10px;
+}
+.keyboard span{
+    background-color: white;
+    padding: 10px;
+    display:inline-block;
+    border-radius: 10px;
+    flex: 1;
+    font-size: 1.5rem;
+}
+.keyboard span[data-key="ShiftRight"] ,.keyboard span[data-key="Space"] {
+    flex: 5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.keyboard .topRow , .keyboard .homeRow{
+    margin-right: 80px;
+}
+.keyboard span[data-key="Enter"]{
+    position: absolute;
+    width:50px;
+    height: 80px;
+    top:3.5em;
+    right:20px;
+}
+.keyboard span[data-key="CapsLock"]{
+    font-size: .8rem;
 }
