--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,16 @@
 }
 body{
     font-family: sans-serif;
-    display:flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-direction: column;
     min-height: 100vh;
+}
+
+main{
+    display: flex!important;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    width: 100%;
+    padding-top: 50px;
 }
 .text{
     display: flex;
@@ -41,6 +46,27 @@ body{
     border-bottom: solid 5px  var(--primary-color)!important;
 }
 
+/* header */
+
+header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 15px;
+    width: 100%;
+    height: 50px;
+    z-index: 2;
+}
+header h1{
+    margin: 0;
+}
+header button.addCustomText{
+    background-color: black;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+}
+
 /* Keyboard preview */
 
 .keyboard{
@@ -51,6 +77,7 @@ body{
     border: solid 1px rgb(102, 102, 102);
     display: flex;
     gap: 10px;
+    margin-top: 100px;  
     position: relative;
     flex-direction: column;
 }
@@ -64,6 +91,7 @@ body{
     display:inline-block;
     border-radius: 10px;
     flex: 1;
+    text-align:center;
     font-size: 1.5rem;
 }
 .keyboard span[data-key="ShiftRight"] ,.keyboard span[data-key="Space"] {
@@ -88,5 +116,47 @@ body{
 }
 .active{
     background-color: var(--primary-color)!important;
+    color: white;
+}
+
+/* Custom Text Container */
+.customTextContainer{
+    position: absolute;
+    /* display:none; */
+    background: white;
+    border: 1px solid black;
+    box-shadow: inset 0 0  5px rgba(0, 0, 0, 0.347);
+    min-width: 50vw;
+    max-width: 80vw;
+    padding: 20px;
+    text-align: end;
+    top:50%;
+    left:50%;
+    z-index: 9;
+    transform: translate(-50%, -50%);
+}
+.customTextWrapper{
+    width:100vw;
+    height:100vw;
+    background: black;
+    opacity: .4;
+    z-index: 8;
+    position: absolute;
+}
+.customTextContainer textarea{
+    width:100%;
+}
+.customTextContainer button{
+    border: none;
+    padding: 10px 20px;
+    font-size: 1rem;
+    margin-top: 10px;
+}
+.customTextContainer button.customTextok{
+    background-color: green;
+    color: white;
+}
+.customTextContainer button.customTextno{
+    background-color: red;
     color: white;
 }
